--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^5.1.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "fs": "^0.0.1-security",
+    "less": "^2.7.3",
+    "less-vars-to-js": "^1.3.0",
     "next": "13.1.1",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   }
 }
